HSEARCH-3949 Remove OSGi integration tests from legacy code